# SnakeOpencv

./: CMakeLists.txt  README.md
src/: CMakeLists.txt~  MainSnake.cpp
